--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
-    "zod": "^3.24.1"
+    "react-icons": "^5.4.0",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
