--- a/package.json
+++ b/package.json
@@ -7,23 +7,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node src/seed/seed.ts",
+    "seed2": "ts-node src/seed/seed2.ts",
+    "seed3": "ts-node src/seed/seed3.ts"
+
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/bcryptjs": "^2.4.6",
     "apexcharts": "^3.45.2",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
-    "next": "^14.2.4",
+    "lucide-react": "^0.474.0",
+    "next": "^15.2.0-canary.27",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
@@ -39,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
