--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/bcryptjs": "^2.4.6",
     "apexcharts": "^3.45.2",
     "bcryptjs": "^2.4.3",
+    "bpmn-js": "^18.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "lucide-react": "^0.474.0",
