--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-table": "^8.20.6",
     "@types/bcryptjs": "^2.4.6",
     "apexcharts": "^3.45.2",
     "bcryptjs": "^2.4.3",
